feat: add link to github

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,12 @@ import Footer from "@/components/Footer.astro";
           <li>✓ 100% Client-side Privacy</li>
           <li>✓ Open Source Code</li>
         </ul>
-        <button class="btn btn-primary full-width">View Source Code</button>
+        <a
+          href="https://github.com/amanso23/api-key-generator"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="btn btn-primary full-width">View Source Code</a
+        >
       </div>
     </section>
 
