--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,8 +6,10 @@ const currentYear = new Date().getFullYear();
   <div class="footer-links">
     <a href="/privacy">Privacy</a>
     <a href="/terms">Terms</a>
-    <a href="https://github.com" target="_blank" rel="noopener noreferrer"
-      >GitHub</a
+    <a
+      href="https://github.com/amanso23/api-key-generator"
+      target="_blank"
+      rel="noopener noreferrer">GitHub</a
     >
   </div>
   <p>&copy; {currentYear} <b>keys.</b></p>
