feat: add new favicon and fixed margins

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -411,6 +411,11 @@ import Footer from "@/components/Footer.astro";
         display: block;
         padding: 1rem; /* Reduce padding on mobile */
       }
+
+      .social-proof {
+        margin-top: 116px;
+      }
+
       .fake-ui-window {
         display: block; /* Ensure visible */
       }
